fix: email in footer not appearing aligned when breaking

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -126,7 +126,8 @@ a {
         min-width: 133px;
     }
     #footerLinks {
-        font-size: 1.15rem
+        font-size: 1.15rem;
+        text-align: center;
     }
     #footerCopyright {
         font-size: .8rem;
